# engineering_practices_hw1

./: .pre-commit-config.yaml  LINTING.md  README.md  pyproject.toml  some_code_1.py  some_code_2.py
